kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-blog
  namespace: blog
spec:
  selector:
    app: blog
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
