kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: blog
  name: ingress-blog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-blog
  rules:
    - host: localhost
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blog-service
              port:
                number: 3000
